# testing-llms-in-the-real-world

./: .env.example  .gitignore  Makefile  README.md  hyper-parameters.yaml  pyproject.toml
.github/workflows/: giskard_scan.yaml
reports/: 2023.11.15-13.00.32.html  2023.11.15-13.00.32.md  2023.11.15-13.14.21.html  2023.11.15-13.24.00.html  2023.11.16-10.49.28.html  2023.11.16-11.21.20.html
src/: build_model.py  model.py  paths.py  run.py  scan.py  scan_model.py  utils.py
